--- a/src/sass/components/auth/_auth-modal.scss
+++ b/src/sass/components/auth/_auth-modal.scss
@@ -64,7 +64,7 @@
       padding: 1rem 1.25rem;
       border: 1px solid transparent; // Hidden border initally
       border-radius: 1rem;
-      font-size: $font-size-xl;
+      font-size: 1.6rem;
       transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
       background-color: $color-stone-50;
       color: $color-stone-800;
@@ -79,7 +79,8 @@
       &:focus {
         background-color: white;
         border-color: rgba($color-emerald-500, 0.3);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05),
+        box-shadow:
+          0 4px 12px rgba(0, 0, 0, 0.05),
           0 0 0 4px rgba($color-emerald-500, 0.1);
         transform: translateY(-1px);
         outline: none;
@@ -88,7 +89,7 @@
       &::placeholder {
         color: $color-stone-500;
         font-weight: 400;
-        font-size: $font-size-lg;
+        font-size: 1.6rem;
       }
     }
   }
